--- a/package.xml
+++ b/package.xml
@@ -9,6 +9,19 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <depend>rclpy</depend>
+  <depend>serial</depend>
+  <depend>struct</depend>
+  <depend>math</depend>
+  <depend>sys</depend>
+  <depend>numpy</depend>
+  <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>sensor_msgs</depend>
+
+  <exec_depend>python3-numpy</exec_depend>
+  <exec_depend>tf2_ros_py</exec_depend>
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
